src/objects/DRE__DRE_Action__mdt.object
<CustomObject>
    <fields>
        <fullName>DRE__Apex_Class_Name__c</fullName>
        <label>Apex Class Name</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Action_Processor__c</fullName>
        <inlineHelpText>Custom processor lookup (optional)</inlineHelpText>
        <label>DRE Action Processor</label>
        <referenceTo>DRE__DRE_Action_Processor__mdt</referenceTo>
        <relationshipLabel>DRE Actions</relationshipLabel>
        <relationshipName>DRE_Actions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__IsScopable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected enables scoping for child records</description>
        <label>Scopable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Source__c</fullName>
        <description>Limits selection of objects this Action can apply to</description>
        <label>Object Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Filtered Only</fullName>
                </value>
                <value>
                    <fullName>Record Only</fullName>
                </value>
                <value>
                    <fullName>Filtered Except Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Requires_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                    <default>true</default>
                    <label>Automation</label>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Roll-Up Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRE Action</label>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>DRE__Apex_Class_Name__c</columns>
        <columns>DRE__Description__c</columns>
        <columns>DRE__Type__c</columns>
        <columns>DRE__Requires_Attributes__c</columns>
        <columns>DRE__IsScopable__c</columns>
        <columns>DRE__Object_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>DRE Actions</pluralLabel>
</CustomObject>